Fix z-index and move Vercel logo

--- a/src/sass/player.sass
+++ b/src/sass/player.sass
@@ -312,6 +312,7 @@
             margin: 0
             text-align: center
             transition: opacity .1s linear
+            z-index: variables.$least-zindex
             &[line-name=main]
                 font-size: 22px
             &[line-name=sub]
@@ -337,6 +338,7 @@
             padding: 10px
             box-sizing: border-box
             cursor: pointer
+            z-index: variables.$least-zindex
             svg
                 width: 100%
                 height: 100%
